--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
         "production production production .";
     grid-gap: 1px;
     background-color: black;
+    border-collapse: collapse;
 
 }
 
@@ -19,65 +20,73 @@
 
 .material {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 80px 1fr 1fr  80px;
+    grid-template-columns: 110px 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "name_mat . . . . . ."
-        "name_mat . . . . . ."
-        "name_mat . . . . . ."
-        "name_mat . . . . . ."
-        "name_mat . . . . . ."
-        "name_mat . . . . . .";
+        "name_mat ."
+        "name_mat ."
+        "name_mat ."
+        "name_mat ."
+        "name_mat ."
+        "name_mat . ";
     grid-area: material;
     height: auto;
+    
 }
 
 .name_mat {
     grid-area: name_mat;
     align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-right: 1px solid black;
+    height: 100%;
 }
 
 .recycling {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 80px 1fr 1fr  80px;
+    grid-template-columns: 110px 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "name_recyc . . . ."
-        "name_recyc . . . ."
-        "name_recyc . . . ."
-        "name_recyc . . . ."
-        "name_recyc . . . ."
-        "name_recyc . . . .";
+        "name_recyc ."
+        "name_recyc ."
+        "name_recyc ."
+        "name_recyc ."
+        "name_recyc ."
+        "name_recyc .";
     grid-area: recycling;
-    border-bottom: 1px solid black;
     height: auto;
 }
 
 .name_recyc {
     grid-area: name_recyc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     align-self: center;
     border-right: 1px solid black;
+    height: 100%;
 }
 
 
 .production {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 80px 1fr 1fr  80px;
+    grid-template-columns: 110px 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "name_prod . . . ."
-        "name_prod . . . ."
-        "name_prod . . . ."
-        "name_prod . . . ."
-        "name_prod . . . ."
-        "name_prod . . . .";
+        "name_prod ."
+        "name_prod ."
+        "name_prod ."
+        "name_prod ."
+        "name_prod ."
+        "name_prod .";
     grid-area: production;
     border-bottom: 1px solid black;
     height: auto;
@@ -86,7 +95,11 @@
 .name_prod {
     grid-area: name_prod;
     align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-right: 1px solid black;
+    height: 100%;
 }
 
 .buttons {
@@ -113,6 +126,19 @@
 
 .test {
     grid-area: test;
+}
+
+.material_line{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    column-gap: 1em;
+    row-gap: 10px;
+    margin-left: 10px;
+}
+
+.material_line > * {
+    flex: 1;
 }
 
 .resourse_line{
