--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 .material {
     display: grid;
     grid-template-columns: 110px 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -49,7 +49,7 @@
 .recycling {
     display: grid;
     grid-template-columns: 110px 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -77,7 +77,7 @@
 .production {
     display: grid;
     grid-template-columns: 110px 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
