--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     grid-auto-flow: row;
     grid-template-areas:
         "material material material buttons"
-        "recycling recycling recycling ."
+        "recycling recycling recycling city"
         "production production production .";
     grid-gap: 1px;
     background-color: black;
@@ -105,7 +105,7 @@
 .buttons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -126,6 +126,30 @@
 
 .test {
     grid-area: test;
+}
+
+.city {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "city_head"
+        "."
+        ".";
+    grid-area: city;
+    height: auto;
+}
+
+.city_head {
+    grid-area: city_head;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid black;
+    height: 100%;
 }
 
 .material_line{
