--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 .main_container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1.4fr 1.4fr;
-    grid-template-rows: 250px 250px 250px;
+    grid-template-columns: 1fr 0.6fr ;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "material material material buttons"
-        "recycling recycling recycling build"
-        "production production production build";
+        "material  buttons"
+        "recycling  build"
+        "production  build";
     grid-gap: 1px;
     background-color: black;
     border-collapse: collapse;
@@ -58,9 +58,11 @@
         "name_recyc ."
         "name_recyc ."
         "name_recyc ."
+        "name_recyc ."
         "name_recyc .";
     grid-area: recycling;
     height: auto;
+    
 }
 
 .name_recyc {
@@ -141,6 +143,7 @@
         ".";
     grid-area: build;
     height: auto;
+    border-bottom: 1px solid black;
 }
 
 .build_head {
@@ -159,10 +162,19 @@
     flex-wrap: nowrap;
     margin-left: 10px;
     margin-right: 10px;
+    
 }
 
 .material_line > * {
     flex: 1;
+}
+
+.material_line .w1 {
+    width: 100px;
+}
+
+.ml-p {
+    margin-top: 10px;
 }
 
 .resourse_line{
@@ -189,7 +201,7 @@ button {
 }
 
 .gridItemBorder {
-    border-bottom: 2px solid #333;
+    border-bottom: 1px solid black;
     place-self: center;
 }
 
