--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
         "material  buttons"
         "recycling  build"
         "production  build";
-    grid-gap: 1px;
+    grid-gap: 2px;
     background-color: black;
     border-collapse: collapse;
 
@@ -43,8 +43,6 @@
     flex-wrap: nowrap;
     margin-left: 10px;
     margin-right: 10px;
-    justify-content: space-between;
-    align-items: left;
 }
 
 .name_mat {
@@ -64,7 +62,7 @@
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "name_recyc ."
+        "name_recyc head_rec"
         "name_recyc ."
         "name_recyc ."
         "name_recyc ."
@@ -74,6 +72,15 @@
     grid-area: recycling;
     height: auto;
     
+}
+
+.head_rec {
+    grid-area: head_rec;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .name_recyc {
@@ -94,14 +101,14 @@
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "name_prod ."
+        "name_prod head_prod"
         "name_prod ."
         "name_prod ."
         "name_prod ."
         "name_prod ."
         "name_prod .";
     grid-area: production;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     height: auto;
 }
 
@@ -113,6 +120,15 @@
     align-items: center;
     border-right: 1px solid black;
     height: 100%;
+}
+
+.head_prod {
+    grid-area: head_prod;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .buttons {
@@ -150,10 +166,11 @@
     grid-auto-flow: row;
     grid-template-areas:
         "build_head"
+        "head_build"
         ".";
     grid-area: build;
     height: auto;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
 }
 
 .build_head {
@@ -165,6 +182,16 @@
     border-bottom: 1px solid black;
     height: 100%;
 }
+
+.head_build {
+    grid-area: head_build;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 
 .material_line{
     display: flex;
