--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+        "head_1 head_2"
         "material  buttons"
         "recycling  build"
         "production  build";
@@ -18,9 +19,66 @@
     background-color: white;
   }
 
+
+.head_1 {
+    display: grid;
+    grid-template-columns: 120px 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "name_head1 head_menu";
+    grid-area: head_1;
+    height: auto;
+}
+
+.name_head1 {
+    grid-area: name_head1;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid black;
+    height: 100%;
+    font-weight: bold;
+}
+
+.head_menu {
+    grid-area: head_menu;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.head_2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "name_head2";
+    grid-area: head_2;
+    height: auto;
+
+}
+
+.name_head2{
+    grid-area: name_head2;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
+    place-self: center;
+    font-weight: bold;
+}
 .material {
     display: grid;
-    grid-template-columns: 110px 1fr;
+    grid-template-columns: 120px 1fr;
     grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
@@ -58,7 +116,7 @@
 
 .recycling {
     display: grid;
-    grid-template-columns: 110px 1fr;
+    grid-template-columns: 120px 1fr;
     grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
@@ -98,7 +156,7 @@
 
 .production {
     display: grid;
-    grid-template-columns: 110px 1fr;
+    grid-template-columns: 120px 1fr;
     grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
