--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,6 +200,7 @@
     grid-auto-flow: row;
     grid-template-areas:
         "money"
+        "population"
         "clicker"
         "test";
     grid-area: buttons;
@@ -208,6 +209,10 @@
 
 .money {
     grid-area: money;
+}
+
+.population{
+    grid-area: population;
 }
 
 .clicker {
@@ -379,3 +384,63 @@ body,
 /* Меню */
 
 .tooltip_templates { display: none; }
+
+
+
+.improvements {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "taxes . "
+        ". ."
+        ". .";
+    grid-gap: 1px;
+    background-color: black;
+    border-collapse: collapse;
+}
+
+.improvements>* {
+    background-color: white;
+}
+
+.taxes {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "taxes_head"
+        ". "
+        ". ";
+    grid-area: taxes;
+}
+
+.taxes_head {
+    grid-area: taxes_head;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid black;
+    height: 100%;
+    font-weight: bold;
+}
+
+.upgrade_line{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    
+}
+
+.upgrade_line > * {
+    flex: 1;
+    text-align: center;
+}
