--- a/styles/styles.css
+++ b/styles/styles.css
@@ -339,8 +339,13 @@ body,
     font-size: 17px;
 }
 
+.tablinks.bl {
+    border-left: 1px solid black;
+}
+
 .tab select {
     float: right;
+    border-left: 1px solid black;
 }
 
 /* Change background color of buttons on hover */
@@ -438,6 +443,13 @@ body,
     margin-right: 10px;
     
     
+}
+
+.upgrade_line .c  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .upgrade_line > * {
